unpackaged/main/default/objects/Broadcast_Calendar__c/Broadcast_Calendar__c.object-meta.xml
<CustomObject>
    <description>This object is to store the start date, ,end date, billing date of the billing periods of an year</description>
    <label>Broadcast Calendar</label>
    <nameField>
        <displayFormat>BIL-{00000000}</displayFormat>
        <label>Broadcast Calendar Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broadcast Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>