unpackaged/main/default/objects/Broadcast_Calendar__c/fields/Broadcast_Month__c.field-meta.xml
<CustomField>
    <fullName>Broadcast_Month__c</fullName>
    <description>The name of the Broadcast Month of the date range defined by Start Date and End Date</description>
    <inlineHelpText>The name of the Broadcast Month of the date range defined by Start Date and End Date</inlineHelpText>
    <label>Broadcast Month</label>
    <length>30</length>
    <type>Text</type>
</CustomField>