unpackaged/main/default/objects/Broadcast_Calendar__c/fields/Broadcast_Year__c.field-meta.xml
<CustomField>
    <fullName>Broadcast_Year__c</fullName>
    <description>The Broadcast Year of the date range defined by Start Date and End Date</description>
    <inlineHelpText>The Broadcast Year of the date range defined by Start Date and End Date</inlineHelpText>
    <label>Broadcast Year</label>
    <length>20</length>
    <type>Text</type>
</CustomField>