unpackaged/main/default/objects/Broadcast_Calendar__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>This is to store the end date of the billing period.</description>
    <inlineHelpText>This is to store the end date of the billing period.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>