unpackaged/main/default/objects/Broadcast_Calendar__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>This is to store the start date of the billing period.</description>
    <inlineHelpText>This is to store the start date of the billing period.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>